--- a/app/src/main/res/layout/fragment_api.xml
+++ b/app/src/main/res/layout/fragment_api.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".ui.api.ApiFragment">
     <TextView
-        android:id="@+id/text_home"
+        android:id="@+id/text_joke"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -19,4 +19,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <Button
+        android:id="@+id/button_fetch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/fetch_joke"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_joke" />
 </androidx.constraintlayout.widget.ConstraintLayout>
