--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,8 +13,16 @@
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/menu_camera" />
         <item
+            android:id="@+id/nav_gps"
+            android:icon="@drawable/ic_menu_gps"
+            android:title="@string/menu_gps" />
+        <item
             android:id="@+id/nav_swipe"
             android:icon="@drawable/ic_menu_swipe"
             android:title="@string/menu_swipe" />
+        <item
+            android:id="@+id/nav_wifi_direct"
+            android:icon="@drawable/ic_menu_wifi_direct"
+            android:title="@string/menu_wifi_direct" />
     </group>
 </menu>
