--- a/app/src/main/res/layout/fragment_spotify.xml
+++ b/app/src/main/res/layout/fragment_spotify.xml
@@ -7,10 +7,11 @@
     android:layout_height="match_parent"
     tools:context=".ui.gps.GpsFragment">
     <TextView
-        android:id="@+id/text_wifi_direct"
+        android:id="@+id/text_song_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/wifi_direct_message"
+        android:gravity="center"
+        android:text="@string/song_name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
