--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -17,6 +17,10 @@
             android:icon="@drawable/ic_menu_gps"
             android:title="@string/menu_gps" />
         <item
+            android:id="@+id/nav_spotify"
+            android:icon="@drawable/ic_menu_spotify"
+            android:title="@string/menu_spotify" />
+        <item
             android:id="@+id/nav_swipe"
             android:icon="@drawable/ic_menu_swipe"
             android:title="@string/menu_swipe" />
