--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -21,6 +21,11 @@
         android:label="@string/menu_gps"
         tools:layout="@layout/fragment_gps" />
     <fragment
+        android:id="@+id/nav_spotify"
+        android:name="cloud.englert.experimental.ui.spotify.SpotifyFragment"
+        android:label="@string/menu_spotify"
+        tools:layout="@layout/fragment_spotify" />
+    <fragment
         android:id="@+id/nav_swipe"
         android:name="cloud.englert.experimental.ui.swipe.SwipeFragment"
         android:label="@string/menu_swipe"
