--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -21,6 +21,21 @@
         android:label="@string/menu_gps"
         tools:layout="@layout/fragment_gps" />
     <fragment
+        android:id="@+id/nav_json"
+        android:name="cloud.englert.experimental.ui.json.JsonFragment"
+        android:label="@string/menu_json"
+        tools:layout="@layout/fragment_json" />
+    <fragment
+        android:id="@+id/nav_notification"
+        android:name="cloud.englert.experimental.ui.notification.NotificationFragment"
+        android:label="@string/menu_notification"
+        tools:layout="@layout/fragment_notification" />
+    <fragment
+        android:id="@+id/nav_qr"
+        android:name="cloud.englert.experimental.ui.qr.QRFragment"
+        android:label="@string/menu_qr"
+        tools:layout="@layout/fragment_qr" />
+    <fragment
         android:id="@+id/nav_spotify"
         android:name="cloud.englert.experimental.ui.spotify.SpotifyFragment"
         android:label="@string/menu_spotify"
