--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -41,6 +41,11 @@
         android:label="@string/menu_swipe"
         tools:layout="@layout/fragment_swipe" />
     <fragment
+        android:id="@+id/nav_text_recognition"
+        android:name="cloud.englert.experimental.ui.textrecognition.TextRecognitionFragment"
+        android:label="@string/menu_text_recognition"
+        tools:layout="@layout/fragment_textrecognition" />
+    <fragment
         android:id="@+id/nav_wifi_direct"
         android:name="cloud.englert.experimental.ui.wifi_direct.WifiDirectFragment"
         android:label="@string/menu_wifi_direct"
